--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -14,6 +14,7 @@
     "react": { "version": "detect"}
   },
   "rules": {
+   "prettier/prettier": "error",
     // suppress errors for missing 'import React' in files
    "react/react-in-jsx-scope": "off",
    "react/prop-types": "off",
