--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "clsx": "^1.1.1",
     "eslint": "^7.26.0",
     "formik": "^2.2.6",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.1.0",
+    "react-big-calendar": "^0.33.6",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
