--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "sib-api-v3-sdk": "^8.2.1",
     "socket.io-client": "^4.0.1",
     "typescript": "^4.2.3",
     "use-debounce": "^6.0.0",
