--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "^17.0.2",
     "body-parser": "^1.19.0",
     "clsx": "^1.1.1",
+    "dayjs": "^1.10.6",
     "eslint": "^7.26.0",
     "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
     "socket.io-client": "^4.0.1",
