Removed files with no changes added by the editor or due EOL problems

--- a/server/package.json
+++ b/server/package.json
@@ -11,17 +11,21 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bull": "^3.28.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
+    "dayjs": "^1.10.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-validator": "^6.11.1",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.7",
+    "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "redis": "^3.1.2",
+    "sib-api-v3-sdk": "^8.2.1",
     "socket.io": "^4.1.0"
   },
   "devDependencies": {
