--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.972.0",
     "bcryptjs": "^2.4.3",
     "bull": "^3.28.1",
     "colors": "^1.4.0",
@@ -23,10 +24,13 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "nodemon": "^2.0.6",
     "redis": "^3.1.2",
     "sib-api-v3-sdk": "^8.2.1",
-    "socket.io": "^4.1.0"
+    "socket.io": "^4.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
