--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "clsx": "^1.1.1",
     "dayjs": "^1.10.6",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.1",
+    "@types/react-big-calendar": "^0.33.1",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
